--- a/frontend/src/app/core/form-components/comment/comment.component.html
+++ b/frontend/src/app/core/form-components/comment/comment.component.html
@@ -5,7 +5,7 @@
       { label: ' |', translate: false },
       { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '1500' } }
     ]"
-    [required]="true"
+    [required]="required"
     fieldLabel="{{ label }}"
   ></app-atlas-lable-field>
   <textarea data-cy="comment" formControlName="comment" matInput rows="7"></textarea>
