--- a/frontend/src/app/core/form-components/text-field/text-field.component.html
+++ b/frontend/src/app/core/form-components/text-field/text-field.component.html
@@ -1,10 +1,10 @@
-<app-atlas-lable-field
+<app-atlas-label-field
   [fieldExamples]="fieldExamples"
   [required]="required"
   fieldLabel="{{ fieldLabel }}"
   infoIconLink="{{ infoIconLink }}"
   infoIconTitle="{{ infoIconTitle }}"
-></app-atlas-lable-field>
+></app-atlas-label-field>
 <form [formGroup]="form">
   <div class="text-field-wrapper">
     <div class="text-field-flex">
