--- a/frontend/src/app/pages/lidi/color-picker/rgb/rgb-picker.component.html
+++ b/frontend/src/app/pages/lidi/color-picker/rgb/rgb-picker.component.html
@@ -1,11 +1,11 @@
-<app-atlas-lable-field
+<app-atlas-label-field
   [fieldExamples]="[
     { label: 'FORM.FOR_EXAMPLE', translate: true },
     { label: '#4AC44F', translate: false }
   ]"
   [required]="true"
   fieldLabel="{{ label }}"
-></app-atlas-lable-field>
+></app-atlas-label-field>
 <div class="d-flex align-items-center">
   <form [formGroup]="formGroup">
     <div class="text-field-wrapper">
