--- a/frontend/src/app/core/form-components/comment/comment.component.html
+++ b/frontend/src/app/core/form-components/comment/comment.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="formGroup" class="d-flex flex-column">
-  <app-atlas-lable-field
+  <app-atlas-label-field
     [fieldExamples]="[
       { label: 'FORM.TEXT', translate: true },
       { label: ' |', translate: false },
@@ -7,7 +7,7 @@
     ]"
     [required]="required"
     fieldLabel="{{ label }}"
-  ></app-atlas-lable-field>
+  ></app-atlas-label-field>
   <textarea data-cy="comment" formControlName="comment" matInput rows="7"></textarea>
   <app-atlas-field-error [form]="formGroup" controlName="comment"></app-atlas-field-error>
 </div>
