--- a/frontend/src/app/core/form-components/atlas-field-error/atlas-field-error.component.scss
+++ b/frontend/src/app/core/form-components/atlas-field-error/atlas-field-error.component.scss
@@ -1,5 +1,6 @@
 @use 'src/styles/variables' as variables;
 
 span {
-  color: variables.$errorColor;
+  color: variables.$warnColor;
+  font-size: 75% !important;
 }
