--- a/frontend/src/app/core/form-components/date-range/date-range.component.html
+++ b/frontend/src/app/core/form-components/date-range/date-range.component.html
@@ -26,7 +26,7 @@
     </div>
     <app-atlas-field-error [form]="formGroup" controlName="validFrom"></app-atlas-field-error>
   </div>
-  <div class="d-flex flex-column col-6">
+  <div class="d-flex flex-column col-6 pe-3">
     <app-atlas-label-field
       [fieldExamples]="[
         { label: 'FORM.FOR_EXAMPLE', translate: true },
