ATLAS-1115: migrate some error-field components

--- a/frontend/src/app/pages/bodi/business-organisations/detail/business-organisation-detail.component.html
+++ b/frontend/src/app/pages/bodi/business-organisations/detail/business-organisation-detail.component.html
@@ -178,7 +178,7 @@
               {{ 'BODI.BUSINESS_ORGANISATION.BUSINESS_TYPES.' + type | translate }}
             </mat-option>
           </mat-select>
-          <mat-error fieldErrors></mat-error>
+          <app-atlas-field-error [form]="form" controlName="businessTypes"></app-atlas-field-error>
         </mat-form-field>
       </div>
     </div>
