--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -123,8 +123,8 @@
             {{ 'LIDI.LINE.TYPES.' + type | translate }}
           </mat-option>
         </mat-select>
-        <mat-error fieldErrors></mat-error>
       </mat-form-field>
+      <app-atlas-field-error [form]="form" controlName="lineType"></app-atlas-field-error>
     </div>
 
     <div class="d-flex flex-column col-3">
@@ -141,8 +141,8 @@
             {{ 'LIDI.PAYMENT.' + type | translate }}
           </mat-option>
         </mat-select>
-        <mat-error fieldErrors></mat-error>
       </mat-form-field>
+      <app-atlas-field-error [form]="form" controlName="paymentType"></app-atlas-field-error>
     </div>
   </div>
 
