--- a/frontend/src/app/pages/user-administration/user-select/user-select.component.html
+++ b/frontend/src/app/pages/user-administration/user-select/user-select.component.html
@@ -14,10 +14,30 @@
   <input
     #searchUserInput
     type="text"
-    placeholder="Search.."
-    (keyup)="searchUser(searchUserInput.value)"
+    placeholder="Search..."
+    (keyup)="keyUpEvent.next(searchUserInput.value)"
+    (focus)="displayDropdownElements = true"
+    (blur)="displayDropdownElements = false"
   />
-  <div class="dropdown-element-wrapper" *ngIf="userSearchResults$ | async as users">
-    <span class="dropdown-element" *ngFor="let user of users">{{ user | userSelectFormat }}</span>
-  </div>
+  <ng-container *ngIf="searchResults$ | async as items">
+    <div class="dropdown-element-wrapper" *ngIf="items.length > 0 && displayDropdownElements">
+      <span
+        class="dropdown-element"
+        *ngFor="let item of items"
+        (click)="displayDropdownElements = false; selectionChange.emit(item)"
+      >
+        <ng-container
+          *ngTemplateOutlet="dropdownElementTemplateRef; context: { $implicit: item }"
+        ></ng-container>
+      </span>
+    </div>
+
+    <span *ngIf="displayDropdownElements && searchUserInput.value.length > 1 && items.length === 0">
+      Keine Resultate gefunden
+    </span>
+
+    <span *ngIf="displayDropdownElements && searchUserInput.value.length <= 1"
+      >Type min 2 characters</span
+    >
+  </ng-container>
 </div>
