--- a/frontend/src/app/pages/user-administration/user-select/user-select.component.scss
+++ b/frontend/src/app/pages/user-administration/user-select/user-select.component.scss
@@ -20,11 +20,20 @@ input {
 }
 
 .dropdown-element-wrapper {
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   max-height: 300px;
   overflow: auto;
   border: 1px solid variables.$gray-100;
+  background-color: variables.$gray-50;
+  border-radius: 10px;
+  margin-top: 3px;
+
+  &.display-none {
+    display: none;
+  }
 }
 
 .dropdown-element {
