ATLAS-1115: clean up paginator

--- a/frontend/src/app/core/components/table/table.component.html
+++ b/frontend/src/app/core/components/table/table.component.html
@@ -1,4 +1,4 @@
-<div class="overview-table">
+<div class="overview-table pb-xl-5">
   <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
   <app-table-search
     (searchEvent)="searchData($event)"
