--- a/frontend/src/app/core/components/user/user.component.html
+++ b/frontend/src/app/core/components/user/user.component.html
@@ -1,5 +1,5 @@
 <ng-template [ngIf]="isAuthenticated">
-  <button mat-button id="user-menu-button" [matMenuTriggerFor]="profile" title="{{ userName }}">
+  <button [matMenuTriggerFor]="profile" id="user-menu-button" mat-button title="{{ userName }}">
     <div class="user-presentation d-inline-flex">
       <div class="user-icon bg-color-primary-500">
         <em class="bi bi-person" style="font-size: 16px"></em>
@@ -16,17 +16,17 @@
         <div class="d-inline-block">
           <span class="mb-0 user-info-modal">{{ 'PROFILE.YOUR_ROLES' | translate }}</span>
         </div>
-        <div class="user-role-item" *ngFor="let role of roles">
+        <div *ngFor="let role of roles" class="user-role-item">
           <em class="bi bi-circle-fill user-roles-list-item pe-1"></em>
           {{ 'COMMON.ROLES.' + role | translate }}
         </div>
-        <div class="user-role-item" *ngFor="let permission of permissions">
+        <div *ngFor="let permission of permissions" class="user-role-item">
           <em class="bi bi-circle-fill user-roles-list-item pe-1"></em>
           {{ permission.application }}: {{ 'COMMON.ROLES.' + permission.role | translate }}
         </div>
       </div>
       <hr />
-      <button mat-button (click)="logout()" id="logout" class="w-100">
+      <button (click)="logout()" class="w-100" id="logout" mat-button>
         <em class="bi bi-box-arrow-right"></em>
         {{ 'PROFILE.LOGOUT' | translate }}
       </button>
@@ -34,7 +34,7 @@
   </mat-menu>
 </ng-template>
 <ng-template [ngIf]="!isAuthenticated">
-  <button mat-button id="login" (click)="login()">
+  <button (click)="login()" id="login" mat-button>
     <div class="user-presentation d-inline-flex">
       <div class="user-icon bg-color-primary-500">
         <em class="bi bi-person" style="font-size: 16px"></em>
