ATLAS-1115: Fix bodi e2e tests

--- a/frontend/src/app/core/form-components/text-field/text-field.component.html
+++ b/frontend/src/app/core/form-components/text-field/text-field.component.html
@@ -13,7 +13,12 @@
         *ngTemplateOutlet="customChildInputPrefixTemplate"
       >
       </ng-container>
-      <input [formControlName]="controlName" [ngStyle]="customInputNgStyle" type="text" />
+      <input
+        [formControlName]="controlName"
+        [ngStyle]="customInputNgStyle"
+        type="text"
+        [attr.data-cy]="controlName"
+      />
       <ng-container
         #customChildInputPostfixTemplate
         *ngTemplateOutlet="customChildInputPostfixTemplate"
