ATLAS-1115: fix button font

--- a/frontend/src/styles/atlas-components/_atlas-button.scss
+++ b/frontend/src/styles/atlas-components/_atlas-button.scss
@@ -6,6 +6,8 @@ button.atlas-raised-button {
   background-color: variables.$white !important;
   height: 56px;
   padding: 0 20px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 button.footer-btn {
