--- a/frontend/src/app/core/form-components/url/url.component.html
+++ b/frontend/src/app/core/form-components/url/url.component.html
@@ -6,6 +6,7 @@
       { label: ' |', translate: false },
       { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '255' } }
     ]"
+    [formGroup]="formGroup"
     controlName="icon"
     fieldLabel="LIDI.ICON"
   >
