--- a/frontend/src/app/pages/ttfn/detail/timetable-field-number-detail.component.html
+++ b/frontend/src/app/pages/ttfn/detail/timetable-field-number-detail.component.html
@@ -16,6 +16,7 @@
             { label: '30.003 |', translate: false },
             { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
           ]"
+          [formGroup]="form"
           [required]="true"
           controlName="number"
           fieldLabel="TTFN.NUMBER"
@@ -29,6 +30,7 @@
             { label: '30.003 |', translate: false },
             { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
           ]"
+          [formGroup]="form"
           [required]="true"
           controlName="swissTimetableFieldNumber"
           fieldLabel="TTFN.SWISS_TIMETABLE_FIELD_NUMBER"
@@ -45,6 +47,7 @@
             { label: 'Bern Bahnhof - Eigerplatz - Weissenbühl |', translate: false },
             { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
           ]"
+          [formGroup]="form"
           controlName="description"
           fieldLabel="TTFN.DESCRIPTION"
         >
